--- a/crawler/src/main/resources/templates/form.html
+++ b/crawler/src/main/resources/templates/form.html
@@ -143,7 +143,7 @@
         const townSelect = document.getElementById("town");
         const selectedTown = townSelect.options[townSelect.selectedIndex].text;
 
-        const url = `http://localhost:8080/${selectedTown}`;
+        const url = `http://138.197.111.146/${selectedTown}`;
 
         try {
             const response = await fetch(url);
