--- a/crawler/src/main/resources/templates/index.html
+++ b/crawler/src/main/resources/templates/index.html
@@ -5,13 +5,28 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-  <title>Търси имот</title>
+  <title>Сравнителни оценки на пазара</title>
+  <style>
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      text-align: center;
+    }
+    .container {
+      max-width: 600px;
+    }
+  </style>
 </head>
 <body>
 <div class="container mt-4">
+  <h1>Сравнителни оценки на пазара</h1>
   <form action="/uploadPdf" method="POST" enctype="multipart/form-data">
-    <input type="file" name="file" required>
-    <button type="submit">ТЪРСИ</button>
+    <div class="mb-3">
+      <input type="file" name="file" class="form-control" required>
+    </div>
+    <button type="submit" class="btn btn-primary">Генерирай оценки</button>
   </form>
 </div>
 </body>
