--- a/crawler/src/main/resources/templates/form.html
+++ b/crawler/src/main/resources/templates/form.html
@@ -143,7 +143,8 @@
         const townSelect = document.getElementById("town");
         const selectedTown = townSelect.options[townSelect.selectedIndex].text;
 
-        const url = `http://198.199.122.215:8080/${selectedTown}`;
+        // const url = `http://198.199.122.215:8080/${selectedTown}`;
+        const url = `http://localhost:8080/${selectedTown}`;
 
         try {
             const response = await fetch(url);
