--- a/crawler/src/main/resources/templates/index.html
+++ b/crawler/src/main/resources/templates/index.html
@@ -22,7 +22,7 @@
 <body>
 <div class="container mt-4">
   <h1>Сравнителни оценки на пазара</h1>
-  <form action="/uploadPdf" method="POST" enctype="multipart/form-data">
+  <form action="/generate-word" method="POST" enctype="multipart/form-data">
     <div class="mb-3">
       <input type="file" name="file" class="form-control" required>
     </div>
