--- a/crawler/src/main/resources/templates/form.html
+++ b/crawler/src/main/resources/templates/form.html
@@ -2,49 +2,47 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+            integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+            integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+            crossorigin="anonymous"></script>
     <title>Търси имот</title>
 </head>
 <body>
 <div class="container mt-4">
+    <h2 class="text-center mb-4">Изготвяне на Сравнителна Оценка</h2>
+
     <form th:action="@{/generate-pdf}" method="POST" th:object="${dto}">
+        <div class="row mb-3">
+            <!-- Град -->
+            <div class="col-md-6">
+                <label for="town" class="form-label">Град:</label>
+                <select id="town" name="town" class="form-select" onchange="loadNeighborhoods()" th:field="*{city}"
+                        required>
+                    <option selected value="">Изберете град</option>
+                    <option th:each="town: ${neighborhoods}" th:value="${town.getCityName()}"
+                            th:text="${town.getCityName()}"></option>
+                </select>
+            </div>
 
-        <!-- Град -->
-        <div class="mb-3">
-            <label  for="town" class="form-label">Град:</label>
-            <select id="town" name="town" class="form-select" onchange="loadNeighborhoods()" th:field="*{city}" required>
-                <option selected value="">Изберете град</option>
-                <option th:each="town: ${neighborhoods}" th:value="${town.getCityName()}" th:text="${town.getCityName()}"></option>
-            </select>
-        </div>
-
-        <!-- Квартал -->
-        <div class="mb-3">
-            <label for="neighborhood" class="form-label">Квартал:</label>
-
-            <select id="neighborhood" name="neighborhood" class="form-select" th:field="*{location}" required>
-                <option selected value="">Изберете квартал</option>
-            </select>
-        </div>
-
-
-        <!-- Тип транзакция -->
-        <div class="mb-3">
-            <label for="transactionType" class="form-label">Тип на транзакцията:</label>
-            <select id="transactionType" name="transactionType" class="form-select" th:field="*{actionType}" required>
-                <option value="0"></option>
-                <option value="2">Наем</option>
-                <option value="1">Продажба</option>
-            </select>
+            <!-- Квартал -->
+            <div class="col-md-6">
+                <label for="neighborhood" class="form-label">Квартал:</label>
+                <select id="neighborhood" name="neighborhood" class="form-select" th:field="*{location}" required>
+                    <option selected value="">Изберете квартал</option>
+                </select>
+            </div>
         </div>
 
         <!-- Вид имот -->
         <div class="mb-3">
             <label for="propertyType" class="form-label">Вид имот:</label>
             <select id="propertyType" name="propertyType" class="form-select" th:field="*{propertyType}" required>
-                <option value="0"></option>
+                <option value="0" disabled></option>
                 <option value="1">1-СТАЕН</option>
                 <option value="2">2-СТАЕН</option>
                 <option value="3">3-СТАЕН</option>
@@ -71,40 +69,23 @@
         <div class="mb-3">
             <label for="buildingType" class="form-label">Тип строителство:</label>
             <select id="buildingType" name="buildingType" class="form-select">
-                <option value="unknown"></option>
+                <option value="unknown" disabled></option>
                 <option value="panel">Панел</option>
                 <option value="brick">Тухла</option>
             </select>
         </div>
+        <div class="row mb-3">
+            <!-- Чиста площ -->
+            <div class="col-md-6">
+                <label for="usableArea" class="form-label">Чиста площ (кв.м):</label>
+                <input type="number" id="usableArea" name="usableArea" class="form-control" min="0" required>
+            </div>
 
-        <!-- Чиста площ -->
-        <div class="mb-3">
-            <label for="usableArea" class="form-label">Чиста площ (кв.м):</label>
-            <input type="number" id="usableArea" name="usableArea" class="form-control" min="0">
-        </div>
-
-        <!-- Обща площ -->
-        <div class="mb-3">
-            <label for="totalArea" class="form-label">Обща площ (кв.м):</label>
-            <input type="number" id="totalArea" name="totalArea" class="form-control" min="0" th:field="*{propertySize}" required>
-        </div>
-
-        <!-- Брой помещения -->
-        <div class="mb-3">
-            <label for="roomsCount" class="form-label">Брой помещения:</label>
-            <input type="number" id="roomsCount" name="roomsCount" class="form-control" min="0" th:field="*{numberOfRooms}">
-        </div>
-
-        <!-- Брой спални -->
-        <div class="mb-3">
-            <label for="bedroomsCount" class="form-label">Брой спални:</label>
-            <input type="number" id="bedroomsCount" name="bedroomsCount" class="form-control" min="0" th:field="*{numberOfBedrooms}">
-        </div>
-
-        <!-- Брой бани -->
-        <div class="mb-3">
-            <label for="bathroomsCount" class="form-label">Брой бани:</label>
-            <input type="number" id="bathroomsCount" name="bathroomsCount" class="form-control" min="0" th:field="*{numberOfBathrooms}">
+            <!-- Обща площ -->
+            <div class="col-md-6">
+                <label for="totalArea" class="form-label">Обща площ (кв.м):</label>
+                <input type="number" id="totalArea" name="totalArea" class="form-control" min="0" th:field="*{propertySize}" required>
+            </div>
         </div>
 
         <!-- Гараж -->
@@ -113,28 +94,15 @@
             <label class="form-check-label" for="hasGarage">Има ли гараж</label>
         </div>
 
-        <!-- Изложение -->
-        <div class="mb-3">
-            <label for="orientation" class="form-label">Изложение:</label>
-            <select id="orientation" name="orientation" class="form-select" th:field="*{orientation}">
-                <option value="east">Изток</option>
-                <option value="west">Запад</option>
-                <option value="north">Север</option>
-                <option value="south">Юг</option>
-                <option value="northeast">Североизток</option>
-                <option value="northwest">Северозапад</option>
-                <option value="southeast">Югоизток</option>
-                <option value="southwest">Югозапад</option>
-            </select>
-        </div>
-
         <!-- Цена -->
         <div class="mb-3">
             <label for="priceInEUR" class="form-label">Цена (EUR):</label>
-            <input type="number" id="priceInEUR" name="priceInEUR" class="form-control" min="0" th:field="*{price}">
+            <input type="number" id="priceInEUR" name="priceInEUR" class="form-control" min="0" th:field="*{price}" required>
         </div>
 
-        <button class="btn btn-lg" type="submit">ТЪРСИ</button>
+        <div class="d-flex justify-content-center">
+            <button class="btn btn-lg btn-primary" type="submit">ТЪРСИ</button>
+        </div>
     </form>
 </div>
 
