--- a/crawler/src/main/resources/templates/form.html
+++ b/crawler/src/main/resources/templates/form.html
@@ -1,139 +1,140 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-            integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-            integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-            crossorigin="anonymous"></script>
-    <title>Търси имот</title>
+  <meta charset="UTF-8">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+          integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+          crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+          integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+          crossorigin="anonymous"></script>
+  <title>Търси имот</title>
 </head>
 <body>
 <div class="container mt-4">
-    <h2 class="text-center mb-4">Изготвяне на Сравнителна Оценка</h2>
+  <h2 class="text-center mb-4">Изготвяне на Сравнителна Оценка</h2>
 
-    <form th:action="@{/generate-pdf}" method="POST" th:object="${dto}">
-        <div class="row mb-3">
-            <!-- Град -->
-            <div class="col-md-6">
-                <label for="town" class="form-label">Град:</label>
-                <select id="town" name="town" class="form-select" onchange="loadNeighborhoods()" th:field="*{city}"
-                        required>
-                    <option selected value="">Изберете град</option>
-                    <option th:each="town: ${neighborhoods}" th:value="${town.getCityName()}"
-                            th:text="${town.getCityName()}"></option>
-                </select>
-            </div>
+  <form th:action="@{/generate-word-form}" method="POST" th:object="${dto}">
+    <div class="row mb-3">
+      <!-- Град -->
+      <div class="col-md-6">
+        <label for="town" class="form-label">Град:</label>
+        <select id="town" name="town" class="form-select" onchange="loadNeighborhoods()" th:field="*{city}"
+                required>
+          <option selected value="">Изберете град</option>
+          <option th:each="town: ${neighborhoods}" th:value="${town.getCityName()}"
+                  th:text="${town.getCityName()}"></option>
+        </select>
+      </div>
 
-            <!-- Квартал -->
-            <div class="col-md-6">
-                <label for="neighborhood" class="form-label">Квартал:</label>
-                <select id="neighborhood" name="neighborhood" class="form-select" th:field="*{location}" required>
-                    <option selected value="">Изберете квартал</option>
-                </select>
-            </div>
-        </div>
+      <!-- Квартал -->
+      <div class="col-md-6">
+        <label for="neighborhood" class="form-label">Квартал:</label>
+        <select id="neighborhood" name="neighborhood" class="form-select" th:field="*{location}" required>
+          <option selected value="">Изберете квартал</option>
+        </select>
+      </div>
+    </div>
 
-        <!-- Вид имот -->
-        <div class="mb-3">
-            <label for="propertyType" class="form-label">Вид имот:</label>
-            <select id="propertyType" name="propertyType" class="form-select" th:field="*{propertyType}" required>
-                <option value="0" disabled></option>
-                <option value="1">1-СТАЕН</option>
-                <option value="2">2-СТАЕН</option>
-                <option value="3">3-СТАЕН</option>
-                <option value="4">4-СТАЕН</option>
-                <option value="5">МНОГОСТАЕН</option>
-                <option value="6">МЕЗОНЕТ</option>
-                <option value="7">ОФИС</option>
-                <option value="8">АТЕЛИЕ, ТАВАН</option>
-                <option value="9">ЕТАЖ ОТ КЪЩА</option>
-                <option value="10">КЪЩА</option>
-                <option value="11">ВИЛА</option>
-                <option value="12">МАГАЗИН</option>
-                <option value="13">ЗАВЕДЕНИЕ</option>
-                <option value="14">СКЛАД</option>
-                <option value="15">ГАРАЖ, ПАРКОМЯСТО</option>
-                <option value="16">ПРОМ. ПОМЕЩЕНИЕ</option>
-                <option value="17">ХОТЕЛ</option>
-                <option value="18">ПАРЦЕЛ</option>
-                <option value="19">ЗЕМЕДЕЛСКА ЗЕМЯ</option>
-            </select>
-        </div>
+    <!-- Вид имот -->
+    <div class="mb-3">
+      <label for="propertyType" class="form-label">Вид имот:</label>
+      <select id="propertyType" name="propertyType" class="form-select" th:field="*{propertyType}" required>
+        <option value="0" disabled></option>
+        <option value="1">1-СТАЕН</option>
+        <option value="2">2-СТАЕН</option>
+        <option value="3">3-СТАЕН</option>
+        <option value="4">4-СТАЕН</option>
+        <option value="5">МНОГОСТАЕН</option>
+        <option value="6">МЕЗОНЕТ</option>
+        <option value="7">ОФИС</option>
+        <option value="8">АТЕЛИЕ, ТАВАН</option>
+        <option value="9">ЕТАЖ ОТ КЪЩА</option>
+        <option value="10">КЪЩА</option>
+        <option value="11">ВИЛА</option>
+        <option value="12">МАГАЗИН</option>
+        <option value="13">ЗАВЕДЕНИЕ</option>
+        <option value="14">СКЛАД</option>
+        <option value="15">ГАРАЖ, ПАРКОМЯСТО</option>
+        <option value="16">ПРОМ. ПОМЕЩЕНИЕ</option>
+        <option value="17">ХОТЕЛ</option>
+        <option value="18">ПАРЦЕЛ</option>
+        <option value="19">ЗЕМЕДЕЛСКА ЗЕМЯ</option>
+      </select>
+    </div>
 
-        <!-- Тип строителство -->
-        <div class="mb-3">
-            <label for="buildingType" class="form-label">Тип строителство:</label>
-            <select id="buildingType" name="buildingType" class="form-select">
-                <option value="unknown" disabled></option>
-                <option value="panel">Панел</option>
-                <option value="brick">Тухла</option>
-            </select>
-        </div>
-        <div class="row mb-3">
-            <!-- Чиста площ -->
-            <div class="col-md-6">
-                <label for="usableArea" class="form-label">Чиста площ (кв.м):</label>
-                <input type="number" id="usableArea" name="usableArea" class="form-control" min="0" required>
-            </div>
+    <!-- Тип строителство -->
+    <div class="mb-3">
+      <label for="buildingType" class="form-label">Тип строителство:</label>
+      <select id="buildingType" name="buildingType" class="form-select">
+        <option value="unknown" disabled></option>
+        <option value="panel">Панел</option>
+        <option value="brick">Тухла</option>
+      </select>
+    </div>
+    <div class="row mb-3">
+      <!-- Чиста площ -->
+      <div class="col-md-6">
+        <label for="usableArea" class="form-label">Чиста площ (кв.м):</label>
+        <input type="number" id="usableArea" name="usableArea" class="form-control" min="0" required>
+      </div>
 
-            <!-- Обща площ -->
-            <div class="col-md-6">
-                <label for="totalArea" class="form-label">Обща площ (кв.м):</label>
-                <input type="number" id="totalArea" name="totalArea" class="form-control" min="0" th:field="*{propertySize}" required>
-            </div>
-        </div>
+      <!-- Обща площ -->
+      <div class="col-md-6">
+        <label for="totalArea" class="form-label">Обща площ (кв.м):</label>
+        <input type="number" id="totalArea" name="totalArea" class="form-control" min="0" th:field="*{propertySize}"
+               required>
+      </div>
+    </div>
 
-        <!-- Гараж -->
-        <div class="form-check mb-3">
-            <input class="form-check-input" type="checkbox" id="hasGarage" name="hasGarage" th:field="*{hasGarage}">
-            <label class="form-check-label" for="hasGarage">Има ли гараж</label>
-        </div>
+    <!-- Гараж -->
+    <div class="form-check mb-3">
+      <input class="form-check-input" type="checkbox" id="hasGarage" name="hasGarage" th:field="*{hasGarage}">
+      <label class="form-check-label" for="hasGarage">Има ли гараж</label>
+    </div>
 
-        <!-- Цена -->
-        <div class="mb-3">
-            <label for="priceInEUR" class="form-label">Цена (EUR):</label>
-            <input type="number" id="priceInEUR" name="priceInEUR" class="form-control" min="0" th:field="*{price}" required>
-        </div>
+    <!-- Цена -->
+    <div class="mb-3">
+      <label for="priceInEUR" class="form-label">Цена (EUR):</label>
+      <input type="number" id="priceInEUR" name="priceInEUR" class="form-control" min="0" th:field="*{price}" required>
+    </div>
 
-        <div class="d-flex justify-content-center">
-            <button class="btn btn-lg btn-primary" type="submit">ТЪРСИ</button>
-        </div>
-    </form>
+    <div class="d-flex justify-content-center">
+      <button class="btn btn-lg btn-primary" type="submit">ТЪРСИ</button>
+    </div>
+  </form>
 </div>
 
 <script>
-    async function loadNeighborhoods() {
-        const townSelect = document.getElementById("town");
-        const selectedTown = townSelect.options[townSelect.selectedIndex].text;
+  async function loadNeighborhoods() {
+      const townSelect = document.getElementById("town");
+      const selectedTown = townSelect.options[townSelect.selectedIndex].text;
 
-        // const url = `http://198.199.122.215:8080/${selectedTown}`;
-        const url = `http://localhost:8080/${selectedTown}`;
+      // const url = `http://localhost:8080/${selectedTown}`;
+      const url = `http://localhost:8080/${selectedTown}`;
 
-        try {
-            const response = await fetch(url);
-            if (!response.ok) {
-                throw new Error('Network response was not ok ' + response.statusText);
-            }
-            const data = await response.json();
+      try {
+          const response = await fetch(url);
+          if (!response.ok) {
+              throw new Error('Network response was not ok ' + response.statusText);
+          }
+          const data = await response.json();
 
 
-            // Populate the neighborhoods dropdown
-            const neighborhoodSelect = document.getElementById("neighborhood");
-            neighborhoodSelect.innerHTML = ''; // Clear previous options
-            data.forEach(neighborhood => {
-                const option = document.createElement("option");
-                option.text = neighborhood;
-                neighborhoodSelect.add(option);
-            });
-        } catch (error) {
-            console.error('There has been a problem with your fetch operation:', error);
-        }
-    }
+          // Populate the neighborhoods dropdown
+          const neighborhoodSelect = document.getElementById("neighborhood");
+          neighborhoodSelect.innerHTML = ''; // Clear previous options
+          data.forEach(neighborhood => {
+              const option = document.createElement("option");
+              option.text = neighborhood;
+              neighborhoodSelect.add(option);
+          });
+      } catch (error) {
+          console.error('There has been a problem with your fetch operation:', error);
+      }
+  }
 </script>
 </body>
 </html>
