--- a/crawler/src/main/resources/templates/attach-pdf.html
+++ b/crawler/src/main/resources/templates/attach-pdf.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="UTF-8">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-  <title>Изберете вариант за генериране на Сравнителна Оценка</title>
+  <title>Сравнителни оценки на пазара</title>
   <style>
     body {
       display: flex;
@@ -20,18 +20,17 @@
   </style>
 </head>
 <body>
-<div class="container">
-  <div class="row mb-3">
-    <div class="col-12 d-flex justify-content-center">
-      <a href="http://198.199.122.215:8080/pdf" class="btn btn-lg btn-primary" role="button">Генерирай с прикачване на ПДФ</a>
+<div class="container mt-4">
+  <h1>Сравнителни оценки на пазара</h1>
+  <form action="/generate-word" method="POST" enctype="multipart/form-data">
+    <div class="mb-3">
+      <input type="file" name="file" class="form-control" required>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-12 d-flex justify-content-center">
-      <a href="http://198.199.122.215:8080/form" class="btn btn-lg btn-primary" role="button">Генерирай с форма</a>
+    <div class="d-flex justify-content-center">
+      <button type="submit" class="btn btn-lg btn-primary me-3">Генерирай оценки</button>
+      <a href="http://198.199.122.215:8080/" class="btn btn-lg btn-primary" role="button">Връщане към начало</a>
     </div>
-  </div>
+  </form>
 </div>
-
 </body>
 </html>
