--- a/crawler/src/main/resources/templates/form.html
+++ b/crawler/src/main/resources/templates/form.html
@@ -102,8 +102,10 @@
     </div>
 
     <div class="d-flex justify-content-center">
-      <button class="btn btn-lg btn-primary" type="submit">ТЪРСИ</button>
+      <button class="btn btn-lg btn-primary me-3" type="submit">Търси</button>
+      <a href="http://198.199.122.215:8080/" class="btn btn-lg btn-primary" role="button">Връщане към начало</a>
     </div>
+
   </form>
 </div>
 
@@ -112,8 +114,8 @@
       const townSelect = document.getElementById("town");
       const selectedTown = townSelect.options[townSelect.selectedIndex].text;
 
-      // const url = `http://198.199.122.215:8080/${selectedTown}`;
-      const url = `http://198.199.122.215:8080/${selectedTown}`;
+      // const url = `http://198.199.122.215:8080//${selectedTown}`;
+      const url = `http://198.199.122.215:8080//${selectedTown}`;
 
       try {
           const response = await fetch(url);
