--- a/crawler/src/main/resources/templates/index.html
+++ b/crawler/src/main/resources/templates/index.html
@@ -23,12 +23,12 @@
 <div class="container">
   <div class="row mb-3">
     <div class="col-12 d-flex justify-content-center">
-      <a href="http://198.199.122.215:8080/pdf" class="btn btn-lg btn-primary" role="button">Генерирай с прикачване на ПДФ</a>
+      <a href="http://localhost:8080/pdf" class="btn btn-lg btn-primary" role="button">Генерирай с прикачване на ПДФ</a>
     </div>
   </div>
   <div class="row">
     <div class="col-12 d-flex justify-content-center">
-      <a href="http://198.199.122.215:8080/form" class="btn btn-lg btn-primary" role="button">Генерирай с форма</a>
+      <a href="http://localhost:8080/form" class="btn btn-lg btn-primary" role="button">Генерирай с форма</a>
     </div>
   </div>
 </div>
