--- a/crawler/src/main/resources/templates/form.html
+++ b/crawler/src/main/resources/templates/form.html
@@ -10,7 +10,19 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
           integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
           crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
+  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
   <title>Търси имот</title>
+  <style>
+    .spinner-container {
+      display: none; /* Initially hidden */
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 1000;
+    }
+  </style>
 </head>
 <body>
 <div class="container mt-4">
@@ -25,19 +37,31 @@
       <!-- Град -->
       <div class="col-md-6">
         <label for="town" class="form-label">Град:</label>
-        <select id="town" name="town" class="form-select" onchange="loadNeighborhoods()" th:field="*{city}"
-                required>
+        <select id="town" name="town" class="form-select" onchange="loadNeighborhoods()" th:field="*{city}" required>
           <option selected value="">Изберете град</option>
           <option th:each="town: ${neighborhoods}" th:value="${town.getCityName()}"
                   th:text="${town.getCityName()}"></option>
         </select>
       </div>
 
-      <!-- Квартал -->
+      <!-- Основен Квартал (Main Location) -->
       <div class="col-md-6">
-        <label for="neighborhood" class="form-label">Квартал:</label>
-        <select id="neighborhood" name="neighborhood" class="form-select" th:field="*{location}" required>
-          <option selected value="">Изберете квартал</option>
+        <label for="mainNeighborhood" class="form-label">Основен квартал:</label>
+        <select id="mainNeighborhood" name="mainLocation" class="form-select" th:field="*{mainLocation}" required>
+          <option selected value="">Изберете основен квартал</option>
+          <!-- Options will be populated dynamically -->
+        </select>
+      </div>
+    </div>
+
+    <!-- Съседни квартали (Neighbour Locations) -->
+    <div class="row mb-3">
+      <div class="col-md-12">
+        <label for="otherNeighborhood" class="form-label">Съседни квартали:</label>
+        <select id="otherNeighborhood" name="neighbourLocations[]" class="form-select" multiple="multiple"
+                th:field="*{neighbourLocations}" required>
+          <option value="">Изберете съседни квартали</option>
+          <!-- Options will be populated dynamically -->
         </select>
       </div>
     </div>
@@ -77,14 +101,14 @@
         <option value="brick">Тухла</option>
       </select>
     </div>
+
     <div class="row mb-3">
       <!-- Чиста площ -->
       <div class="col-md-6">
         <label for="usableArea" class="form-label">Чиста площ (кв.м):</label>
         <input type="number" id="usableArea" name="usableArea" class="form-control" value="0" required
                oninvalid="this.setCustomValidity('Моля, въведете стойност по-голяма от нула.')"
-               oninput="this.setCustomValidity('')"
-        >
+               oninput="this.setCustomValidity('')">
       </div>
 
       <!-- Обща площ -->
@@ -93,10 +117,10 @@
         <input type="number" id="totalArea" name="totalArea" class="form-control" min="1" value="0" required
                oninvalid="this.setCustomValidity('Моля, въведете стойност по-голяма от нула.')"
                oninput="this.setCustomValidity('')"
-               th:field="*{propertySize}"
-        >
+               th:field="*{propertySize}">
       </div>
     </div>
+
     <!-- Гараж -->
     <div class="form-check mb-3">
       <input class="form-check-input" type="checkbox" id="hasGarage" name="hasGarage" th:field="*{hasGarage}">
@@ -111,10 +135,16 @@
 
     <div class="d-flex justify-content-center">
       <button class="btn btn-lg btn-primary me-3" type="submit">Търси</button>
-      <a href="http://198.199.122.215:8080/" class="btn btn-lg btn-info" role="button">Връщане към начало</a>
+      <a href="http://localhost:8080/" class="btn btn-lg btn-info" role="button">Връщане към начало</a>
     </div>
-
   </form>
+
+  <!-- Spinner HTML -->
+  <div id="spinner" class="spinner-container">
+    <div class="spinner-border text-primary" role="status">
+      <span class="visually-hidden">Loading...</span>
+    </div>
+  </div>
 </div>
 
 <script>
@@ -122,8 +152,7 @@
       const townSelect = document.getElementById("town");
       const selectedTown = townSelect.options[townSelect.selectedIndex].text;
 
-      // const url = `http://198.199.122.215:8080/${selectedTown}`;
-      const url = `http://198.199.122.215:8080/${selectedTown}`;
+      const url = `http://localhost:8080/${selectedTown}`;
 
       try {
           const response = await fetch(url);
@@ -132,14 +161,21 @@
           }
           const data = await response.json();
 
+          // Populate the main and neighbor neighborhood dropdowns
+          const mainNeighborhoodSelect = document.getElementById("mainNeighborhood");
+          const neighborNeighborhoodSelect = document.getElementById("otherNeighborhood");
 
-          // Populate the neighborhoods dropdown
-          const neighborhoodSelect = document.getElementById("neighborhood");
-          neighborhoodSelect.innerHTML = ''; // Clear previous options
+          mainNeighborhoodSelect.innerHTML = ''; // Clear previous options
+          neighborNeighborhoodSelect.innerHTML = ''; // Clear previous options
+
           data.forEach(neighborhood => {
-              const option = document.createElement("option");
-              option.text = neighborhood;
-              neighborhoodSelect.add(option);
+              const option1 = document.createElement("option");
+              option1.text = neighborhood;
+              mainNeighborhoodSelect.add(option1); // Main location select
+
+              const option2 = document.createElement("option");
+              option2.text = neighborhood;
+              neighborNeighborhoodSelect.add(option2); // Neighbor locations select
           });
       } catch (error) {
           console.error('There has been a problem with your fetch operation:', error);
@@ -151,7 +187,11 @@
 
       const form = event.target;
       const formData = new FormData(form);
-      const url = 'http://198.199.122.215:8080/generate-word-form';
+      const url = 'http://localhost:8080/generate-word-form';
+      const spinner = document.getElementById("spinner");
+
+      // Show spinner
+      spinner.style.display = "block";
 
       try {
           const response = await fetch(url, {
@@ -159,36 +199,41 @@
               body: formData
           });
 
+          // Hide spinner
+          spinner.style.display = "none";
+
           if (response.status === 204) {
-            const alertBox = document.getElementById("alertBox");
-            alertBox.style.display = "block";
+              const alertBox = document.getElementById("alertBox");
+              alertBox.style.display = "block";
 
-            // Hide the alert box after 5 seconds
-            setTimeout(() => {
-                alertBox.style.display = "none";
-            }, 5000);
-              } else if (response.status === 200) {
-            // Handle file download for 200 response
-            const contentDisposition = response.headers.get('Content-Disposition');
-            const filename = contentDisposition
-                ? contentDisposition.split('filename=')[1].replace(/"/g, '')
-                : 'document.docx'; // Default filename
+              // Hide the alert box after 5 seconds
+              setTimeout(() => {
+                  alertBox.style.display = "none";
+              }, 5000);
+          } else if (response.status === 200) {
+              // Handle file download for 200 response
+              const contentDisposition = response.headers.get('Content-Disposition');
+              const filename = contentDisposition
+                  ? contentDisposition.split('filename=')[1].replace(/"/g, '')
+                  : 'document.docx'; // Default filename
 
-            const blob = await response.blob();
-            const blobUrl = window.URL.createObjectURL(blob);
-            const a = document.createElement('a');
-            a.href = blobUrl;
-            a.download = filename;
-            document.body.appendChild(a);
-            a.click();
-            a.remove();
-            window.URL.revokeObjectURL(blobUrl);
-        } else {
-            // Handle other response statuses if necessary
-            document.getElementById("alertBox").style.display = "block";
-        }
-    }  catch (error) {
+              const blob = await response.blob();
+              const blobUrl = window.URL.createObjectURL(blob);
+              const a = document.createElement('a');
+              a.href = blobUrl;
+              a.download = filename;
+              document.body.appendChild(a);
+              a.click();
+              a.remove();
+              window.URL.revokeObjectURL(blobUrl);
+          } else {
+              // Handle other response statuses if necessary
+              document.getElementById("alertBox").style.display = "block";
+          }
+      } catch (error) {
           console.error('There has been a problem with your fetch operation:', error);
+          // Hide spinner on error
+          spinner.style.display = "none";
       }
   });
 </script>
