--- a/crawler/src/main/resources/templates/form.html
+++ b/crawler/src/main/resources/templates/form.html
@@ -135,7 +135,7 @@
 
     <div class="d-flex justify-content-center">
       <button class="btn btn-lg btn-primary me-3" type="submit">Търси</button>
-      <a href="http://localhost:8080/" class="btn btn-lg btn-info" role="button">Връщане към начало</a>
+      <a href="http://198.199.122.215:8080/" class="btn btn-lg btn-info" role="button">Връщане към начало</a>
     </div>
   </form>
 
@@ -152,7 +152,7 @@
       const townSelect = document.getElementById("town");
       const selectedTown = townSelect.options[townSelect.selectedIndex].text;
 
-      const url = `http://localhost:8080/${selectedTown}`;
+      const url = `http://198.199.122.215:8080/${selectedTown}`;
 
       try {
           const response = await fetch(url);
@@ -187,7 +187,7 @@
 
       const form = event.target;
       const formData = new FormData(form);
-      const url = 'http://localhost:8080/generate-word-form';
+      const url = 'http://198.199.122.215:8080/generate-word-form';
       const spinner = document.getElementById("spinner");
 
       // Show spinner
