--- a/crawler/src/main/resources/templates/attach-pdf.html
+++ b/crawler/src/main/resources/templates/attach-pdf.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
   <meta charset="UTF-8">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -46,8 +46,8 @@
     </div>
     <div class="d-flex justify-content-center">
       <button type="submit" class="btn btn-lg btn-primary me-3">Генерирай оценки</button>
-      <a href="http://198.199.122.215:8080/" class="btn btn-lg btn-info me-3" role="button">Връщане към начало</a>
-      <a href="http://198.199.122.215:8080/download-template" class="btn btn-lg btn-warning" role="button">Свали Word шаблон</a>
+      <a th:href="@{/}" class="btn btn-lg btn-info me-3" role="button">Връщане към начало</a>
+      <a th:href="@{/download-template}" class="btn btn-lg btn-warning" role="button">Свали Word шаблон</a>
     </div>
   </form>
 
@@ -65,7 +65,7 @@
 
       const form = event.target;
       const formData = new FormData(form);
-      const url = 'http://198.199.122.215:8080/generate-word';
+      const url = `${window.location.origin}/generate-word`;
       const spinner = document.getElementById("spinner");
 
       // Show spinner
